# swarmGPT

./: .gitignore  README.md  mkdocs.yml  package-lock.json  pixi.toml  pyproject.toml  swarm_color.py  swarm_test.py
.github/workflows/: docs.yaml  ruff.yaml  tests.yaml
docs/: getting_started.md
docs/media/primitives/: Center.mov  Circle.mov  Cone.mov  Helix.mov  Move.mov  Move_Z.mov  Rotate.mov  Spiral.mov  SpiralSpeed.mov  Star.mov  Twister.mov  Wave.mov  Zigzag.mov
swarm_gpt/: __init__.py  launch.py  render.py
swarm_gpt/api/: __init__.py  server.py
swarm_gpt/core/: __init__.py  backend.py  choreographer.py  drone_swarm.py  sim.py  structured_output_schema.py  viewer_subprocess.py
swarm_gpt/data/: drones.toml  motion_primitive_prompts.yaml  scene.xml  settings.yaml
swarm_gpt/data/presets/Crazyflie Drones Theme (short) | 9 | 20251202_182834/: history.json  trajectory.csv  waypoints.npy
swarm_gpt/data/presets/Crazyflie Drones Theme (short) | 9 | 20251202_183056/: history.json  meta.json  trajectory.csv  waypoints.npy
swarm_gpt/data/presets/Crazyflie Drones Theme (short) | 9 | 20251204_182045/: history.json  trajectory.csv  waypoints.npy
swarm_gpt/data/presets/Crazyflie Drones Theme | 9 | 20251127_232840/: history.json  trajectory.csv  waypoints.npy
swarm_gpt/data/presets/Crazyflie Drones Theme | 9 | 20251202_134248/: history.json  meta.json  trajectory.csv  waypoints.npy
swarm_gpt/data/presets/Still D.R.E | 10 | 20260521_125534/: history.json  meta.json  trajectory.csv  waypoints.npy
swarm_gpt/data/presets/Vivaldi Summer | 20 | 20260430_062211/: history.json  meta.json  waypoints.npy
swarm_gpt/data/presets/Vivaldi Summer | 9 | 20251205_104245/: history.json  meta.json  trajectory.csv  waypoints.npy
swarm_gpt/data/presets/Vivaldi Summer | 9 | 20251205_105804/: history.json  trajectory.csv  waypoints.npy
swarm_gpt/data/presets/Vivaldi Summer | 9 | 20260331_171655/: history.json  trajectory.csv  waypoints.npy
swarm_gpt/ui/: ui.py
swarm_gpt/utils/: __init__.py  llm_providers.py  music_manager.py  ollama_cancel.py  utils.py
tests/: conftest.py
tests/unit/: test_api.py  test_backend.py  test_frontend_setup.py  test_ollama_cancel.py  test_structured_output.py
tools/: dock_landing_test.py  frontend_install.sh  lighthouse_test.py  setup_ollama.sh  test_cflib2.py  test_drone_swarm.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  Player.tsx  api.ts  styles.css  types.ts
web/tests/: player.spec.js
