[build-system]
requires = ["setuptools>=61.0.0", "wheel", "numpy>=2.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "swarmgpt"
version = "0.0.1"
description = "Drone swarm dancing choreographies using LLMs and optimization-based collision avoidance"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
]


########################
# Pip Dependencies
########################

dependencies = [
    "cflib",
    "fire",
    "toml",
    "einops",
    "numpy>=2.0.0,<2.4.0",
    "tqdm",
    "ollama",
    "pyyaml",
    "libfmp @ git+https://github.com/meinardmueller/libfmp.git", # currently released versions have a dependency on numpy<2
    "mutagen",
    "openai",
    "scipy>=1.17.0,<1.18.0",
    "python-vlc",
    "gradio==5.49.1",
    "gradio-client==1.13.3",
]

[project.optional-dependencies]
# option[sim]: basic simulation
sim = [
    "axswarm @ git+https://github.com/utiasDSL/axswarm.git",
    "crazyflow @ git+https://github.com/utiasDSL/crazyflow.git@0.1.0b0",
    "drone-models==0.1.0b0",
    "drone-controllers==0.1.0b0",
    "jax >= 0.7",
]
# option[deploy]: deploy to real drones
deploy = [
    "cflib",
    "drone-estimators",
]

[tool.setuptools.packages]
find = {}

[tool.setuptools.package-data]
lsy_drone_racing = ["envs/assets/*.xml", "envs/assets/*.png"]

[tool.pytest.ini_options]
markers = ["unit", "integration"]


########################
# Pixi Sessions
########################

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.activation]
scripts = ["openai_api_key.sh"]

# environments
[tool.pixi.environments]
default = { features = ["sim"], solve-group = "default" }
deploy = { features = ["sim", "kilted", "deploy"] }
docs = { features = ["docs"] }
tests = { features = ["tests", "sim", "kilted", "deploy"] }

[tool.pixi.dependencies]
# Environment packages
openblas = ">=0.3.30,<0.4"
ruff = "*"
python = ">=3.11.12,<3.14"
pip = ">=25.0.1,<26"
cmake = "*"
compilers = ">=1.9.0, <1.11.0"
make = "*"
# Python packages
numpy = ">=2.0.0,<2.4.0"
gradio = "==5.49.1"
gradio-client = "==1.13.3"


[tool.pixi.pypi-dependencies]
swarmgpt = { path = ".", editable = true }

# feature[kilted]
[tool.pixi.feature.kilted]
channels = ["https://prefix.dev/robostack-kilted"]

[tool.pixi.feature.kilted.dependencies]
# Build tools
compilers = "*"
cmake = "*"
pkg-config = "*"
make = "*"
ninja = "*"
# ROS specific tools
rosdep = "*"
colcon-common-extensions = "*"
# Kilted specific tools
ros-kilted-desktop = "*"

[tool.pixi.feature.kilted.activation]
scripts = ["tools/setup_mocap.sh"]

# feature[tests]
[tool.pixi.feature.tests.dependencies]
pytest = ">=8.4.1"
pytest-timeout = ">=2.1.0"
pytest-cov = ">=6.0.0"
array-api-strict = ">=2.4.1"

[tool.pixi.feature.tests.pypi-dependencies]
torch = ">=2.7.0"  # For doctests
jax = ">=0.7.0"
# pytest-markdown-docs = "*"

[tool.pixi.feature.tests.tasks]
tests = { cmd = "pytest -v tests", description = "Run tests" }
# test-docs = { cmd = "pytest -v --markdown-docs --markdown-docs-syntax=superfences drone_models/ docs/ --ignore=docs/gen_ref_pages.py", env = { SCIPY_ARRAY_API = "1" }, description = "Run doctests for docstrings and documentation" }

# feature[docs]
[tool.pixi.feature.docs.dependencies]
mkdocs = "*"
mkdocs-material = "*"
click = "8.2.1.*"  # https://github.com/mkdocs/mkdocs/issues/4032

[tool.pixi.feature.docs.pypi-dependencies]
mkdocstrings = { version = "*", extras = ["python"] }
mkdocs-gen-files = "*"
mkdocs-literate-nav = "*"
mkdocs-section-index = "*"

[tool.pixi.feature.docs.tasks]
docs-serve = { cmd = "mkdocs serve", description = "Serve docs locally" }
docs-build = { cmd = "mkdocs build", description = "Build docs" }

########################
# ruff Settings
########################

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "docs/conf.py",
]

line-length = 100
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "D", "TCH", "ANN"]
ignore = ["ANN401"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]  # Prevent ruff from reporting conflicting settings with isort
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["D", "ANN"]
"experiments/*" = ["D", "ANN"]
"tests/*" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-annotations]
suppress-dummy-args = true
suppress-none-returning = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
